--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="Style.css">
 </head>
 
+
 <img src="https://www.cambridgema.gov/Layouts/PublicLibrary/_resources/img/css/logo_cambridge-public-library.gif" alt="Cambridge Public Library" class="logo_cambridge-public-library">
 <nav class="pages">
 <a href="index.html">      | Home |</a>
@@ -15,7 +16,7 @@
 <a href="elibrary.html">eLibrary |</a>
 <a href="kids.html">Kids |</a>
 <a href="teens.html">Teens |</a>
-<a href="about-us.html">About Us |</a>
+<a href="about.html">About Us |</a>
 </nav>
 <div class="social-media">
 <a href="https://www.facebook.com/cambridgepubliclibrary" target="_blank"><img src="https://simpleicons.org/icons/facebook.svg" alt="Facebook" style="width: 30px; height: 30px;"></a>
@@ -27,14 +28,17 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 body{
   background-color: #595959;
 }
+
 
 a {
     color: black;
     text-decoration: none;
   }
+
 
 </style>
 <main>
@@ -63,6 +67,7 @@ a {
   </div>
 </section>
 
+
 <div class="whats-happening">
   <h3>WHAT'S HAPPENING</h3>
   <ul>
@@ -80,10 +85,12 @@ a {
   </ul>
   </div>
 
-  
+
+ 
 </main>
 <footer>
 <p>Copyright &copy; 2023 Cambridge Public Library</p>
+
 
 <dl class="Footer1">INFORMATION
   Branch Information
@@ -94,15 +101,18 @@ a {
   Book Donations
   Staff Articles</dl>
 
+
   <dl class="Footer2">RECOMMENDATIONS
     Titles in Demand
     What to Read Next</dl>
+
 
     <dl>
       Award Winners
       Booklists
       Audio@home
       Suggest a Purchase</dl>
+
 
       <dl>CITY OF CAMBRIDGE
         City of Cambridge Homepage
@@ -111,6 +121,7 @@ a {
         School Information
         Street Cleaning Schedule
         Trash and Recycling Schedule</dl>
+
 
         <img src="https://www.cambridgema.gov/Layouts/PublicLibrary/_resources/img/css/bg_copyright.gif" alt="cpl"></img>
 </footer>
