--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 
     </h2><ul>
-        <li><a href="/cpl/aboutus/Awards">Awards</a></li><li><a href="/cpl/aboutus/boardoftrustees">Board of Trustees</a></li><li><a href="/cpl/aboutus/borrowerservices">Borrower Services</a></li><li><a href="/cpl/aboutus/contactinformation">Contact Information</a></li><li><a href="/cpl/aboutus/employmentopportunities1">Employment Opportunities</a></li><li><a href="/cpl/aboutus/friendsofthelibrary">Friends of the Library</a></li><li><a href="/cpl/aboutus/Foundation">Foundation</a></li><li><a href="/cpl/aboutus/getalibrarycard">Get a Library Card</a></li><li><a href="/cpl/aboutus/libraryhistory">Main Library Design</a></li><li><a href="/cpl/aboutus/Policies">Policies</a></li><li><a href="/cpl/aboutus/Reviews">Press</a></li><li><a href="/cpl/aboutus/privacyandyourlibraryrights">Privacy and Your Library Rights</a></li><li><a href="/cpl/aboutus/newsandannouncements">What's Happening</a></li>
+        <li><a href="/cpl/aboutus/Awards">Awards</a></li><li><a href="/cpl/aboutus/boardoftrustees">Board of Trustees</a></li><li><a href="/cpl/aboutus/borrowerservices">Borrower Services</a></li><li><a href="/cpl/aboutus/employmentopportunities1">Employment Opportunities</a></li><li><a href="/cpl/aboutus/friendsofthelibrary">Friends of the Library</a></li><li><a href="/cpl/aboutus/Foundation">Foundation</a></li><li><a href="/cpl/aboutus/getalibrarycard">Get a Library Card</a></li><li><a href="/cpl/aboutus/libraryhistory">Main Library Design</a></li><li><a href="/cpl/aboutus/Policies">Policies</a></li><li><a href="/cpl/aboutus/Reviews">Press</a></li><li><a href="/cpl/aboutus/privacyandyourlibraryrights">Privacy and Your Library Rights</a></li><li><a href="/cpl/aboutus/newsandannouncements">What's Happening</a></li>
     </ul>
 </div>
 
