--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
+body{
+  background-color: #595959;
+}
 
 
 a {
