--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
+slideshow{
   background-color: #595959;
 }
 
+  whats-happening{
+    background-color: #FFFFFF;
+  }
 
 a {
     color: black;
