--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-slideshow{
+.slideshow {
   background-color: #595959;
 }
 
-  whats-happening{
+  .whats-happening {
     background-color: #FFFFFF;
   }
 
@@ -45,7 +45,6 @@ a {
 </style>
 <main>
   <body>
-  <section class="sidebar">
   <div class="slideshow">
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRH6-XE_FlJKGwVZ0Prpt6SMmwL7rHqVUFAPRaMpW5BDKYQGCaJybj6mn61hyAlTezRPWn51ql2s1bY/embed?start=true&loop=true&delayms=5000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
@@ -67,7 +66,6 @@ a {
   <li><a href="donate.html">Donate to the CPL Foundation</a></li>
   </ul>
   </div>
-</section>
 
 
 <div class="whats-happening">
